Fixed the storage link properly
Didn't test before. Didn't work, of course. Fixed properly now.

--- a/ilo/templates/index.html
+++ b/ilo/templates/index.html
@@ -11,7 +11,7 @@
 			<div class="header">
 				<div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
 					<span class="pure-menu-heading"><span id="user">/</span> @ ILO</span>
-					<span class="pure-menu-heading"><a href="https://${storage['fqdn']}:${storage['https_port']}">Storage</a></span>
+					<span class="pure-menu-heading"><a href="https://${config['storage']['fqdn']}:${config['storage']['https_port']}">Storage</a></span>
 					<span class="pure-menu-heading">Uptime <span id="uptime"></span>, CPU usage <span id="cpu"></span></span>
 
 					<ul class="pure-menu-list">
