Guessing time_t is passed in milliseconds
Purely guess, no test.

--- a/ilo/templates/index.html
+++ b/ilo/templates/index.html
@@ -70,7 +70,7 @@
 		}
 
 		function format_timet(timet) {
-			const datetime = new Date(timet);
+			const datetime = new Date(timet * 1000);
 			return datetime.toLocaleString();
 		}
 
