Show more info in Storage UI
Show in storage UI the total capacity that is used and some progressbars
for individual user quotas.

--- a/storage/docroot/css/progress.css
+++ b/storage/docroot/css/progress.css
@@ -1,5 +1,12 @@
+div.sizefloat {
+	color: #fff;
+	float: left;
+	overflow: hidden;
+	width: 200px;
+}
+
 .progress {
-	height: 300px;
+	height: 100px;
 }
 
 .progress > svg {
