Do not need braces inside of Mako block
We're inside a Mako block, this is just pure Python code here.

--- a/storage/templates/index.html
+++ b/storage/templates/index.html
@@ -30,7 +30,7 @@
 						<div class="progress"></div>
 						<span class="spc_free"></span> free
 					</div>
-					%for user in ${config['users']}:
+					%for user in config['users']:
 					<div class="sizefloat" name="${user}">
 						${user}<br />
 						<span class="spc_used"></span> / <span class="spc_total"></span>
