Show the actual user quotas in the progress bars
Now the actual values from the repquota output are parsed and shown in
the status bar as an overview.

--- a/storage/templates/index.html
+++ b/storage/templates/index.html
@@ -108,14 +108,14 @@
 
 		function update_sizefloat(sizefloat, data) {
 			let total, used;
-			console.log(data);
-			if (sizefloat.getAttribute("name") == "#") {
+			const name = sizefloat.getAttribute("name");
+			if (name == "#") {
 				/* Total */
 				total = data["df"]["total"];
 				used = data["df"]["used"];
 			} else {
-				total = 1000000;
-				used = 12345;
+				total = data["quota"]["parsed"][name]["hard"];
+				used = data["quota"]["parsed"][name]["used"];
 			}
 			sizefloat.querySelector(".spc_used").innerHTML = format_space(used);
 			sizefloat.querySelector(".spc_total").innerHTML = format_space(total);
