Move helpers into own file
Improve and consolidate helper functions.

--- a/storage/templates/index.html
+++ b/storage/templates/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="/static/css/progress.css" />
 		<script language="JavaScript" src="/static/js/sprintf.min.js"></script>
 		<script language="JavaScript" src="/static/js/progressbar.min.js"></script>
+		<script language="JavaScript" src="/static/js/helpers.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
@@ -67,36 +68,6 @@
 				}
 			}
 			fetch("/action/" + action);
-		}
-
-		function format_time(secs) {
-			const days = (secs / 86400) | 0;
-			const hours = (secs % 86400 / 3600) | 0;
-			const minutes = (secs % 86400 % 3600 / 60) | 0;
-			return sprintf("%dd %02d:%02d h:m", days, hours, minutes);
-		}
-
-		function format_cpu(uptime, idletime, cpucount) {
-			const idle_ratio = (idletime / cpucount) / uptime;
-			const busy_ratio = 1 - idle_ratio;
-			return sprintf("%.1f%%", 100 * busy_ratio);
-		}
-
-		function format_timet(timet) {
-			const datetime = new Date(timet * 1000);
-			return datetime.toLocaleString();
-		}
-
-		function format_space(bytes) {
-			if (bytes < 1e3) {
-				return sprintf("%.0f B", bytes);
-			} else if (bytes < 1e6) {
-				return sprintf("%.0f MB", bytes / 1e6);
-			} else if (bytes < 1e9) {
-				return sprintf("%.1f GB", bytes / 1e9);
-			} else {
-				return sprintf("%.2f TB", bytes / 1e12);
-			}
 		}
 
 		const elem_content = document.getElementById("content");
