Make output a bit nicer for storage
Some renamed objects.

--- a/storage/templates/index.html
+++ b/storage/templates/index.html
@@ -45,11 +45,11 @@
 
 			<div class="content-wrapper">
 				<div class="content">
-					<h3>IP Address</h3>
-					<pre id="raw_ip"></pre>
-
-					<h3>MDStat</h3>
+					<h3>RAID</h3>
 					<pre id="raw_md"></pre>
+
+					<h3>Network</h3>
+					<pre id="raw_ip"></pre>
 				</div>
 			</div>
 		</div>
