Implement SMART data as well
First attempt at incorporating SMART data.

--- a/storage/templates/index.html
+++ b/storage/templates/index.html
@@ -48,6 +48,10 @@
 					<h3>RAID</h3>
 					<pre id="raw_md"></pre>
 
+					<h3>SMART</h3>
+					<table>
+					</table>
+
 					<h3>Network</h3>
 					<pre id="raw_ip"></pre>
 				</div>
